# cargo-index

./: .travis.yml  Cargo.toml  README.md  appveyor.yml
.github/workflows/: main.yml
reg-index/: Cargo.toml  README.md
reg-index/src/: add.rs  init.rs  lib.rs  list.rs  lock.rs  metadata.rs  util.rs  validate.rs  yank.rs
reg-index/tests/: input_features2  test.rs
src/: main.rs
tests/: test_index.rs
tests/support/: config.rs  mod.rs  package.rs  paths.rs
