[package]
name = "cargo-index"
version = "0.2.3"
authors = ["Eric Huss"]
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["cargo"]
categories = ["development-tools::cargo-plugins"]
readme = "README.md"
description = "Cargo subcommand to manage a registry index."
homepage = "https://github.com/ehuss/cargo-index"
repository = "https://github.com/ehuss/cargo-index"

[dependencies]
clap = "2.32.0"
failure = "0.1.3"
reg-index = { version = "0.4.0", path = "reg-index" }
serde_json = "1.0.33"

[dev-dependencies]
tempfile = "3.1.0"
regex = "1.3.0"
semver = "0.11.0"
url = "2.1.0"

[workspace]
members = ["reg-index"]
exclude = ["target"]
