[workspace]
members = ["reg-index"]
exclude = ["target"]
resolver = "2"

[package]
name = "cargo-index"
version = "0.2.6"
authors = ["Eric Huss"]
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["cargo"]
categories = ["development-tools::cargo-plugins"]
readme = "README.md"
description = "Cargo subcommand to manage a registry index."
homepage = "https://github.com/ehuss/cargo-index"
repository = "https://github.com/ehuss/cargo-index"
rust-version = "1.70"

[dependencies]
anyhow = "1.0.58"
clap = { version = "4.4.6", features = ["cargo"] }
reg-index = { version = "0.5.0", path = "reg-index" }
serde_json = "1.0.33"

[dev-dependencies]
tempfile = "3.1.0"
regex = "1.3.0"
semver = "1.0.0"
url = "2.1.0"
