[package]
name = "reg-index"
version = "0.4.1"
authors = ["Eric Huss"]
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["cargo"]
readme = "README.md"
description = "Library to manage a registry index."
homepage = "https://github.com/ehuss/cargo-index"
repository = "https://github.com/ehuss/cargo-index"

[dependencies]
cargo_metadata = "0.15.0"
failure = "0.1.3"
flate2 = { version = "1.0.6", features = ['zlib'] }
fs2 = "0.4.3"
git2 = "0.13.0"
hex = "0.4.0"
same-file = "1.0.5"
semver = { version = "1.0.0", features = ["serde"] }
serde = "1.0.82"
serde_derive = "1.0.82"
serde_json = "1.0.33"
sha2 = "0.9.0"
tar = { version = "0.4.20", default-features = false }
tempfile = "3.1.0"
url = { version = "2.1.0", features = [ "serde" ] }
walkdir = "2.2.7"
