[package]
name = "reg-index"
version = "0.5.0"
authors = ["Eric Huss"]
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["cargo"]
readme = "README.md"
description = "Library to manage a registry index."
homepage = "https://github.com/ehuss/cargo-index"
repository = "https://github.com/ehuss/cargo-index"
rust-version = "1.60"

[dependencies]
anyhow = "1.0.58"
cargo_metadata = "0.15.0"
flate2 = { version = "1.0.6", features = ['zlib'] }
fs2 = "0.4.3"
git2 = "0.14.4"
hex = "0.4.0"
same-file = "1.0.5"
semver = { version = "1.0.0", features = ["serde"] }
serde = { version = "1.0.82", features = ["derive"] }
serde_json = "1.0.33"
sha2 = "0.10.2"
tar = { version = "0.4.20", default-features = false }
tempfile = "3.1.0"
url = { version = "2.1.0", features = [ "serde" ] }
walkdir = "2.2.7"
